--- a/yarn/package.json
+++ b/yarn/package.json
@@ -3,6 +3,7 @@
     "gulp-cli": "^1.4.0"
   },
   "devDependencies": {
+    "browser-sync": "^2.18.13",
     "gulp": "^3.9.1",
     "gulp-sass": "^3.1.0"
   }
